objects/CopilotForSalesforceAppsEvents__dlm.object
<CustomObject>
    <fields>
        <fullName>ActionDuration__c</fullName>
        <label>Action Duration</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActionId__c</fullName>
        <label>Action ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionName__c</fullName>
        <label>Action Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversationDefinition__c</fullName>
        <label>Conversation Definition</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConversationEventLogType__c</fullName>
        <label>Conversation Event Log Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CopilotName__c</fullName>
        <label>Copilot Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExternalLatencyTime__c</fullName>
        <label>External Latency Time</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalSessionKey__c</fullName>
        <label>External Session Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_uuid__c</fullName>
        <label>Key Qualifier UUID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgId__c</fullName>
        <label>Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanData__c</fullName>
        <label>Plan Data</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousEventLogUuid__c</fullName>
        <label>Previous Event Log UUID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>Session ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TurnId__c</fullName>
        <label>Turn ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>User Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uuid__c</fullName>
        <label>UUID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>